third_party/rust/chromium_crates_io/vendor/cxx-1.0.124/tests/ui/slice_of_type_alias.stderr
error[E0271]: type mismatch resolving `<ElementOpaque as ExternType>::Kind == Trivial`
  --> tests/ui/slice_of_type_alias.rs:13:14
   |
13 |         type ElementOpaque = crate::ElementOpaque;
   |              ^^^^^^^^^^^^^ type mismatch resolving `<ElementOpaque as ExternType>::Kind == Trivial`
   |
note: expected this to be `Trivial`
  --> tests/ui/slice_of_type_alias.rs:27:17
   |
27 |     type Kind = cxx::kind::Opaque;
   |                 ^^^^^^^^^^^^^^^^^
note: required by a bound in `verify_extern_kind`
  --> src/extern_type.rs
   |
   | pub fn verify_extern_kind<T: ExternType<Kind = Kind>, Kind: self::Kind>() {}
   |                                         ^^^^^^^^^^^ required by this bound in `verify_extern_kind`
